--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,3 +25,9 @@ format:
     code-fold: true
     code-tools: true
     df-print: paged
+
+execute:
+  warning: false
+  error: false
+  message: false
+  silent: true
